kubernetes/infrastructure/base/gh-proxy/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: gh-proxy-auth
  namespace: gh-proxy
spec:
  basicAuth:
    secret: gh-proxy-auth
    removeHeader: true
